# hub_dtic_and_sis

./: .dockerignore  .env.example  .geminiignore  .gitignore  ARCHITECTURE_RULES.md  Blueprint_Engenharia_Dados_Dashboards.md.resolved  CLAUDE_CODE_MASTER_PROMPT.md  Dockerfile  PROMPT_CORRECAO_AUTH.md  README.md  REDE_TENSOR_AURORA.ps1  RELATORIO_FASE1.md  RELATORIO_FASE2_ARQUITETURA.md  RELATORIO_FASE3_DIAGNOSTICO.md  auditoria_dashboard_carregadores.md.resolved  backend_blueprint_audit.md.resolved  backend_logs_full.txt  docker-compose.yml  fc_adv_analysis.txt  fc_adv_dump.json  fc_analysis.txt  fc_dump.json  fetch_glpi.py  fetch_glpi_md.py  glpi_dump.md  glpi_output.txt  hunt_string.py  implementation_plan.md.resolved  kb_registros_auditoria_carregadores.md  prompt_blindagem_arquitetural.md  prompt_testes_de_contrato.md  pyproject.toml  test_500.py  test_glpi_profiles.py  test_matrix_logic.py  test_pure.py  test_sis_auth.py  test_users_glpi.py
.gemini/: GEMINI.md  settings.json
app/: config.py  error.txt  main.py
data/: charger_settings.json
docs/: Blueprint_Extracao_Dashboards.md.resolved  PROMPT_LIBRARY (1).md  PROMPT_LIBRARY.html  PROMPT_LIBRARY.md  analise_categorias_duplicadas.md  architecture-audit-diagnosis.md  arquitetura_multi_contexto.md  auditoria_2026-03-11_tensor-aurora.md  auditoria_permissoes.md  bloco_revisao_hub.md  blocos_revisao_hub_dtic_sis.docx  charger_dashboard_audit.md  charger_management_api.md  charger_management_business_rules.md  charger_management_flow.md  charger_management_manager_manual.md  charger_management_test_plan.md  (+59 more)
(+334 files in other folders)
